baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__03_hir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== HIR ITEMS ===
function HelloWorld {
  params: [name: String]
  return: String
  body: Expr {
    exprs: [
      Idx::<Expr>(0): Block { stmts: [], tail_expr: None }
    ]
    root: Idx::<Expr>(0)
  }
}
class User {
  name: String
  age: Int
}
client GPT4 {
  provider: unknown
}
