baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.User {
  name: string
  age: int
}
function user.HelloWorld(name: string) -> string  [llm] {
  baml.llm.call_llm_function(GPT4, "HelloWorld", map { "name": name })
}
function user.HelloWorld$build_request(name: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("HelloWorld", map { "name": name })
}
function user.HelloWorld$render_prompt(name: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("HelloWorld", map { "name": name })
}
