baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.HelloWorld(name: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // name // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "name": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const null, const "HelloWorld", copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.HelloWorld$build_request(name: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // name // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "name": copy _1 };
        _0 = call const fn baml.llm.build_request(const null, const "HelloWorld", copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.HelloWorld$parse(json: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // json // param

    bb0: {
        _0 = call const fn baml.llm.parse(const "HelloWorld", copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.HelloWorld$render_prompt(name: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // name // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "name": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const null, const "HelloWorld", copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}
