baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn HelloWorld(name: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // name // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "name": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const "HelloWorld", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
