baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__04_thir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function HelloWorld:
    Return: string
    Params:
      - name: string
