baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.HelloWorld(name: string) -> string throws never {
  baml.llm.call_llm_function<T>(GPT4, "HelloWorld", map { "name": name }) : string
  !! 43..104: unresolved name: GPT4
}
function user.HelloWorld$render_prompt(name: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "HelloWorld", map { "name": name }) : baml.llm.PromptAst
  !! 43..104: unresolved name: GPT4
}
function user.HelloWorld$build_request(name: string) -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "HelloWorld", map { "name": name }) : baml.http.Request
  !! 43..104: unresolved name: GPT4
}
class user.User {
  name: string
  age: int
}
class user.User$stream {
  name: null | string
  age: null | int
}
