baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Warning: unreachable arm
   ╭─[ registry.baml:1:1 ]
   │
 1 │ // testing.TestCollector — collector for tests and testsets.
   │ │ 
   │ ╰─ unreachable arm
   │ 
   │ Note: Error code: E0001
───╯

  [type] Warning: unreachable arm
    ╭─[ registry.baml:65:13 ]
    │
 65 │ ╭─▶       _ => {
    ┆ ┆   
 68 │ ├─▶     }
    │ │           
    │ ╰─────────── unreachable arm
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `testing.TestRunner` is not callable
    ╭─[ registry.baml:77:24 ]
    │
 77 │ ╭─▶     r: TestRunner => r(base_run)
 78 │ ├─▶   }
    │ │         
    │ ╰───────── type `testing.TestRunner` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `() -> testing.TestReport | unknown` is not callable
    ╭─[ registry.baml:79:5 ]
    │
 79 │ ╭─▶   effective_run()
 80 │ ├─▶ }
    │ │       
    │ ╰─────── type `() -> testing.TestReport | unknown` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `testing.TestSetRunner` is not callable
    ╭─[ registry.baml:86:27 ]
    │
 86 │ ╭─▶     r: TestSetRunner => r(run_children)
 87 │ ├─▶   }
    │ │         
    │ ╰───────── type `testing.TestSetRunner` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type `() -> testing.TestSetReport | unknown` is not callable
    ╭─[ registry.baml:88:5 ]
    │
 88 │ ╭─▶   effective_run()
 89 │ ├─▶ }
    │ │       
    │ ╰─────── type `() -> testing.TestSetReport | unknown` is not callable
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: unresolved name: GPT4
   ╭─[ main.baml:1:1 ]
   │
 1 │ ╭─▶ function HelloWorld(name: string) -> string {
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── unresolved name: GPT4
   │     
   │     Note: Error code: E0001
───╯

  [type] Error: unresolved name: GPT4
   ╭─[ main.baml:1:44 ]
   │
 1 │ ╭─▶ function HelloWorld(name: string) -> string {
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── unresolved name: GPT4
   │     
   │     Note: Error code: E0001
───╯
