baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__05_diagnostics2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unresolved type: T
   ╭─[ containers.baml:6:35 ]
   │
 6 │   function at(self, index: int) -> T? {
   │                                   ─┬─  
   │                                    ╰─── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:11:28 ]
    │
 11 │   function push(self, item: T) -> int {
    │                            ─┬  
    │                             ╰── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:16:24 ]
    │
 16 │   function pop(self) -> T? {
    │                        ─┬─  
    │                         ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:20:31 ]
    │
 20 │   function concat(self, other: T[]) -> T[] {
    │                               ──┬─  
    │                                 ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:20:39 ]
    │
 20 │   function concat(self, other: T[]) -> T[] {
    │                                       ──┬─  
    │                                         ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:24:28 ]
    │
 24 │   function reverse(self) -> T[] {
    │                            ──┬─  
    │                              ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:28:48 ]
    │
 28 │   function slice(self, start: int, end: int) -> T[] {
    │                                                ──┬─  
    │                                                  ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:44:26 ]
    │
 44 │   function has(self, key: K) -> bool {
    │                          ─┬  
    │                           ╰── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:49:25 ]
    │
 49 │   function keys(self) -> K[] {
    │                         ──┬─  
    │                           ╰─── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: V
    ╭─[ containers.baml:53:27 ]
    │
 53 │   function values(self) -> V[] {
    │                           ──┬─  
    │                             ╰─── unresolved type: V
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:58:26 ]
    │
 58 │   function set(self, key: K, value: V) -> null {
    │                          ─┬  
    │                           ╰── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: V
    ╭─[ containers.baml:58:36 ]
    │
 58 │   function set(self, key: K, value: V) -> null {
    │                                    ─┬  
    │                                     ╰── unresolved type: V
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:63:26 ]
    │
 63 │   function get(self, key: K) -> V? {
    │                          ─┬  
    │                           ╰── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: V
    ╭─[ containers.baml:63:32 ]
    │
 63 │   function get(self, key: K) -> V? {
    │                                ─┬─  
    │                                 ╰─── unresolved type: V
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:2:29 ]
   │
 2 │ function deep_copy<T>(value: T) -> T {
   │                             ─┬  
   │                              ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:2:35 ]
   │
 2 │ function deep_copy<T>(value: T) -> T {
   │                                   ─┬  
   │                                    ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:7:27 ]
   │
 7 │ function deep_equals<T>(a: T, b: T) -> bool {
   │                           ─┬  
   │                            ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:7:33 ]
   │
 7 │ function deep_equals<T>(a: T, b: T) -> bool {
   │                                 ─┬  
   │                                  ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ unstable.baml:2:26 ]
   │
 2 │ function string<T>(value: T) -> string {
   │                          ─┬  
   │                           ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: type mismatch: expected string, got unknown
   ╭─[ main.baml:1:44 ]
   │
 1 │ ╭─▶ function HelloWorld(name: string) -> string {
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── type mismatch: expected string, got unknown
   │     
   │     Note: Error code: E0001
───╯

  [type] Error: unresolved name: GPT4
   ╭─[ main.baml:1:44 ]
   │
 1 │ ╭─▶ function HelloWorld(name: string) -> string {
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── unresolved name: GPT4
   │     
   │     Note: Error code: E0001
───╯
