baml_language/crates/baml_tests/snapshots/simple_function/baml_tests__simple_function__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.HelloWorld(name: string) -> string {
    load_const null
    load_const "HelloWorld"
    load_var name
    load_const "name"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function user.HelloWorld$build_request(name: string) -> baml.http.Request {
    load_const "HelloWorld"
    load_var name
    load_const "name"
    alloc_map 1
    call baml.llm.build_request
    return
}

function user.HelloWorld$render_prompt(name: string) -> baml.llm.PromptAst {
    load_const "HelloWorld"
    load_var name
    load_const "name"
    alloc_map 1
    call baml.llm.render_prompt
    return
}
